--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2018"
 [dependencies]
 serenity = { verison = "0.9.0-rc.4", default-features = false, features = ["builder", "client", "gateway", "rustls_backend", "model"] }
 rand = "0.7.3"
-rant = "4.0.0-alpha.13"
+rant = { git = "https://github.com/rant-lang/rant" }
 regex = "1.4.1"
 tokio = { version = "0.2", features = ["macros"] }
